--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xml:lang="en">
     <head>
-          <title>A page written in english</title>
+          <title>My Title</title>
           <meta content="text/html; charset=utf-8" />
     </head>  
-    <body>     
+    <body>  
+        <h1>Hello there</h1>   
         <script src="index.js"></script>
     </body>
 </html>
